# axiom

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AXIOM_PRODUCTION_STATUS.md  BUTTON_INTERACTIVITY_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  DECORATION_BUTTONS_DONE.md  DECORATION_IMPL.md  DEVELOPMENT_STATUS.md  IMPLEMENTATION_REPORT.md  LAZY_UI_ANALYSIS.md  LICENSE  MANUAL_TEST.md  MASTER_DEVELOPMENT_PLAN.md  Makefile  PHASE1_ANALYSIS.md  PHASE1_QUICKSTART.md  PHASE1_TEST_RESULTS.md  PHASE2_PLAN.md  PHASE2_QUICKREF.md  PHASE2_STATUS.md  PHASE_3_COMPLETE.md  PHASE_6_2_SUCCESS_REPORT.md  PHASE_6_3_DAMAGE_TRACKING_PLAN.md  PHASE_6_3_IMPLEMENTATION_PLAN.md  PHASE_6_3_MULTI_WINDOW_PLAN.md  PHASE_6_3_PROGRESS.md  PHASE_6_3_STATUS_SUMMARY.md  PHASE_6_4_SCISSOR_OPTIMIZATION_COMPLETE.md  PHASE_6_4_SMITHAY_INTEGRATION_COMPLETE.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_ROADMAP.md  QUICK_START.md  QUICK_TEST.md  README.md  RELEASE.md  RUN_THIS.md  (+35 more)
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
benches/: compositor_benchmarks.rs
config/: axiom.toml
docs/: ARCHITECTURE_DECISION.md  BACKEND_CONSOLIDATION_COMPLETE.md  BINARY_BUILD_WORKAROUND.md  BLUR_VISUAL_TESTING_COMPLETE.md  BUG_REPORT_WRONG_CLIENT.md  BUILD_MIGRATION_PLAN.md  CHANGES.md  DMABUF_INTEGRATION_COMPLETE.md  FIXES_APPLIED.md  IMPLEMENTATION_STATUS_PHASE5.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  LAYER_SHELL_INTEGRATION_COMPLETE.md  MANUAL_SHM_TEST.md  MIGRATION_COMPLETE.md  NEXT_STEPS.md  NEXT_STEPS_SUMMARY.md  PHASE2_TILING.md  PHASE_1_XDG_SHELL_IMPLEMENTATION.md  PRODUCTION_ANALYSIS_2025.md  PRODUCTION_IMPLEMENTATION_PLAN.md  PROJECT_ANALYSIS_CURRENT_STATE.md  PROJECT_PLAN.md  README.md  REAL_COMPOSITOR_PLAN.md  SECURITY_INTEGRATION_COMPLETE.md  SECURITY_INTEGRATION_SUMMARY.md  SESSION_COMPLETE_SUMMARY.md  SHADOW_RENDERING_VISUAL_TESTS_COMPLETE.md  TODAY_SUMMARY.md  TODO_SUMMARY.md  TRANSFORMATION_COMPLETE.md  TRANSFORMATION_TO_REAL_COMPOSITOR.md  WARP.md  WEEK1_IMPLEMENTATION_COMPLETE.md  WEEK1_REAL_TEXTURE_RENDERING.md  code_review_comprehensive_summary.md  code_review_phase1_summary.md  code_review_phase2_workspace.md  code_review_phase3_effects_complete.md  (+3 more)
docs/analysis/: COMPLETE_PROJECT_ANALYSIS.md  DEVELOPMENT_STATUS.md  IMPLEMENTATION_STATUS.md  PROJECT_ANALYSIS.md
docs/dev/: BACKEND_SELECTION.md  BUILD.md  CONFIG_SUPPORT.md  CONTRIBUTING.md  DRM_HARDWARE_MATRIX.md  DRM_HARDWARE_VALIDATION.md  MULTI_OUTPUT.md  PROFILE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_PROCESS.md  RENDER_ARCHITECTURE.md  SECURITY.md  SETUP.md
docs/guides/: OUTPUT_CONTROL_SOCKET.md  TESTING_CHECKLIST.md
docs/phases/: PHASE5_ROADMAP.md  PHASE_4_STATUS.md  PHASE_5_SMITHAY_INTEGRATION_STATUS.md  PHASE_6_2_IMPLEMENTATION_PLAN.md  PHASE_6_2_PROGRESS.md  PHASE_6_3_DOCUMENTATION_INDEX.md  PHASE_6_3_REMAINING_WORK.md  PHASE_6_3_TESTING_READY.md  PHASE_6_3_VALIDATION_STATUS.md  PHASE_6_3_WINDOWSTACK_INTEGRATION.md  PHASE_6_4_IMPLEMENTATION_PLAN.md  PHASE_6_IMPLEMENTATION_PLAN.md  PHASE_6_SUCCESS_REPORT.md
docs/reference/: README.md  backend_real_archived.rs  backend_simple_archived.rs
docs/sessions/: SESSION_COMPLETE.md  SESSION_SUMMARY_WINDOWSTACK_INTEGRATION.md
docs/testing/: VISUAL_TESTING_COMPLETE.md  VISUAL_TESTING_GUIDE.md
docs/user/: CONFIGURATION.md  INSTALL.md  LIMITATIONS.md  RUNNING.md
examples/: axiom.example.toml  ipc_discover.rs  metrics_client.rs  simple_window.rs
packaging/: README.md  axiom-session  axiom-wayland.desktop  axiom.desktop  axiom.session
packaging/arch/: PKGBUILD
packaging/debian/: control
packaging/flatpak/: manifest.json  org.axiom.Compositor.yml
packaging/systemd/: axiom.service
proptest-regressions/config/: property_tests.txt
proptest-regressions/workspace/: tests.txt
release-notes/: v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md
scripts/: benchmark.sh  build_arch_package.sh  check_packaging_assets.sh  check_security.sh  check_xwayland.sh  coverage.sh  dev_setup.sh  dev_up.sh  drm_validation_report.sh  lazy_ui_client.py  memory_profile.sh  nested_smoke_test.sh  perf_monitor.sh  phase5_kickoff.sh  profile_render.sh  release_prep.sh  setup_phase1.sh  test.sh  test_ipc.py  test_week1_implementation.sh  watch_build.sh  week1_real_rendering.sh  xwayland_end_to_end_smoke.sh
src/: backend_basic.rs  backend_real.rs  clipboard.rs  compositor.rs  decoration.rs  demo_phase4_effects.rs  demo_phase6_minimal.rs  demo_phase6_working.rs  demo_workspace.rs  dmabuf_vulkan.rs  enhanced_buffer_formats.rs  error_recovery.rs  ime.rs  integration_test_suite.rs  ipc_enhanced.rs  ipc_metrics.rs  lib.rs  logging.rs  main.rs  performance_monitoring.rs  real_input.rs  real_rendering_enhancements.rs  real_window_rendering.rs  recovery.rs  sandbox.rs  screencopy.rs  security.rs  smithay_backend.rs  smithay_backend_minimal.rs  smithay_backend_phase6.rs  smithay_backend_phase6_2.rs  smithay_backend_real.rs  smithay_backend_real_minimal.rs  smithay_backend_simple.rs  smithay_backend_working.rs  smithay_enhanced.rs  test_basic.rs  test_real.rs  test_real_backend.rs  test_socket.rs  (+3 more)
src/backend/: clipboard.rs  clipboard_bridge.rs  drm.rs  input.rs  mod.rs  render.rs  render_bridge.rs  screencopy.rs  shm_upload.rs  state.rs  winit.rs  xwayland_dispatch.rs  xwm.rs
src/config/: mod.rs  property_tests.rs  tests.rs
src/effects/: animations.rs  blur.rs  mod.rs  shaders.rs  shadow.rs
src/experimental/: mod.rs
src/input/: mod.rs
src/ipc/: mod.rs
src/protocol/: error_injection.rs  mod.rs  (+1 more)
tests/: Makefile  README_SHM_TESTING.md  cache_lru.rs  client_e2e_tests.rs  clipboard_round_trip.rs  dnd_data_transfer.rs  fullscreen_test.rs  integration_tests.rs  multi_output_render.rs  pixel_render.rs  real_backend_connectivity.rs  real_client_smoke.rs  renderer_damage_integration.rs  resource_lifecycle_tests.rs  screencopy_test.rs  shm_test_client  shm_test_client.c  shm_test_client.py  smithay_integration_tests.rs  stress_multi_window.rs  viewport_scale.rs  visual_blur_tests.rs  visual_effects_tests.rs  visual_golden_tests.rs
(+39 files in other folders)
