[package]
name = "axiom"
version = "0.1.0"
edition = "2021"
authors = ["Axiom Contributors"]
description = "A winit-only Wayland compositor with niri-inspired scrollable workspaces (GLES rendering)"
repository = "https://github.com/GeneticxCln/axiom"
license = "GPL-3.0"
keywords = ["wayland", "compositor", "window-manager", "tiling"]
categories = ["gui"]

[[bin]]
name = "axiom"
path = "src/main.rs"

# Gate examples by a feature so they don't break default builds/tests
[[example]]
name = "metrics_client"
path = "examples/metrics_client.rs"
required-features = ["examples"]

[[bench]]
name = "compositor_benchmarks"
harness = false

[dependencies]
# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }

# Event loop
calloop = { version = "0.12", features = ["signals"] }
anyhow = "1.0"
log = "0.4"
lru = "0.12"
env_logger = "0.10"

# Core Wayland compositor dependencies
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "staging", "unstable"] }

# Smithay compositor framework — winit-only, GLES rendering.
smithay = { version = "0.7.0", default-features = false, features = [
    "backend_winit",
    "renderer_gl",
    "wayland_frontend",
] }

# Graphics and input
# The compositor is winit-only (GLES via Smithay's GlesRenderer). The
# following first-party deps were removed because Smithay 0.7 re-exports
# the equivalents and/or the DRM/KMS backend that needed them is gone:
#   glium, drm, gbm, input, winit, dbus, ctrlc, tracing, cgmath,
#   libseat, udev
xkbcommon = "0.8"  # Smithay 0.7 backend uses xkbcommon for keyboard handling
libc = "0.2"      # pipe2 (clipboard extraction) and getuid (IPC ownership check)

# Event loop / IPC for Lazy UI integration
serde_json = "1.0"

# Utilities
# rand (removed v0.7.6 audit: unused — Phase 3 input simulation was removed)
parking_lot = "0.12"  # For RwLock synchronization
# Compile-time invariant presence-check (Phase 1.A4 hardening).
# Promoted to [dependencies] (was [dev-dependencies]) so the
# `static_assertions::assert_fields!` call site at file scope in
# `src/compositor.rs` is resolvable on every `cargo build` invocation,
# not only on `cargo test`. The crate is no_std-friendly, no runtime
# cost, and only emits a static assertion at compile time. TODO
# before v0.2.0 publish: gate behind an optional
# `compiletime-invariants = ["dep:static_assertions"]` feature so
# downstream consumers can opt out.
static_assertions = "1.1"

# TODO: Add features when compositor dependencies are ready
# [features]
# default = ["smithay-backend"]
# smithay-backend = ["smithay"]
# wlroots-backend = ["wlroots-rs"]

# Library configuration
[lib]
name = "axiom"
path = "src/lib.rs"
# Features
[features]
# `examples` gates the metrics_client example so it doesn't break default builds.
examples = []




# Development dependencies for testing
[dev-dependencies]
criterion = "0.5"
lru = "0.12"
proptest = "1.4"  # Property-based testing
# Integration testing utilities
tempfile = "3.0"  # Temporary files and directories for tests
serial_test = "3.0"  # Sequential test execution# Async testing utilities
# Real-client (headless) Wayland smoke test: connect a wayland-client to the
# compositor's Noop socket and drive an xdg_toplevel + wl_shm surface end-to-end.
wayland-client = "0.31"
# `client` feature adds the client-side xdg-shell bindings used by the test.
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
# Poll-based non-blocking dispatch in the headless clipboard test client.
libc = "0.2"

[build-dependencies]

# Build optimizations
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1  # Faster compilation during development

# Workspace configuration for future modules
[workspace]
members = [
    ".",
    # Future: separate crates for workspace management, etc.
]
